--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,15 +47,27 @@
   
 	
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/getordermark/59f50d0c-6c6c-419d-84d5-4d90b1c80a2c'>Ordermark - Associate Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/mobify/1f960259-2390-4df9-ac2d-23a32d94f59d'>Mobify - Data Analyst (Maternity Leave Contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/credigy/ffca819b-16e6-4bda-8536-f40a6b1fe573'>Credigy - Senior Statistican</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692429148-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/getordermark/59f50d0c-6c6c-419d-84d5-4d90b1c80a2c'>Ordermark - Associate Data Analyst</a></h5> 
+<p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/datacom.co.nz/aa3e312f-aa5d-4938-8e1d-3ea99c621da7'>Datacom - DevOps Analyst/Consultant</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -67,7 +79,7 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
     Data Analyst at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -77,7 +89,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -101,7 +113,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/63EAB3A165'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/63EAB3A165'>Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -264,7 +276,7 @@ Kirkland, WA in Sunnyvale, California. Review all of the job details and apply?.
 <p>5 days ago ... The division is responsible for developing, evaluating, refining, reporting, and 
 presenting statistical data; and providing technical advice and assistance to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Data Analyst will work in the analytics team on games by SEGA Europe's 
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
@@ -339,7 +351,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/967ee523-681a-46e9-854a-db091815cdff'>Bill.com - Senior Risk Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... preferably in Statistics, Physical Sciences, Computer Science, Economics, or a 
 related technical field; Experience using statistics and machine learning to solve
@@ -358,7 +370,7 @@ related technical field; Experience using statistics and machine learning to sol
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zalora.applytojob.com/apply/jCDVS5D6CI/Marketplace-Data-Analyst'>Marketplace Data Analyst - ZALORA SEA - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -453,7 +465,7 @@ responsible?...</p>
 hire, you'll be responsible for data needs throughout the organization. You'll build
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ignitionone/jobs/1787599'>Job Application for Data Analyst at IgnitionOne</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ignitionone/jobs/1787599'>Job Application for Data Analyst at IgnitionOne</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Derive actionable insights from massive data sets with limited oversight; 
 Automate quarterly insights across native / partner channels for external facing 
@@ -471,18 +483,6 @@ time?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692163016-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692244858-senior-analyst-data-and-analysis'>Publicis Groupe Senior Analyst, Data and Analysis | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 
